--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ fastapi~=0.110.3
 uvicorn~=0.29.0
 pydantic~=2.7.1
 pymongo~=4.7.0
+google-ai-generativelanguage~=0.6.2
+google-generativeai~=0.5.2
+langchain-core~=0.1.46
+langchain-experimental~=0.0.57
+langchain-google-genai~=1.0.3
