--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ google-generativeai~=0.5.2
 langchain-core~=0.1.46
 langchain-experimental~=0.0.57
 langchain-google-genai~=1.0.3
-openai-whisper~=20231117
+# openai-whisper~=20231117
 torch~=2.3.0
 tiktoken~=0.6.0
 
