--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pydantic~=2.7.1
 pymongo~=4.7.0
 python-jose~=3.3.0
 passlib~=1.7.4
-starlette0.37.2
+starlette~=0.37.2
 google-ai-generativelanguage~=0.6.2
 google-generativeai~=0.5.2
 langchain-core~=0.1.46
