--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ uvicorn~=0.29.0
 pydantic~=2.7.1
 pymongo~=4.7.0
 python-jose~=3.3.0
-passlib~=1.7.4
 starlette~=0.37.2
 google-ai-generativelanguage~=0.6.2
 google-generativeai~=0.5.2
@@ -13,7 +12,8 @@ langchain-google-genai~=1.0.3
 openai-whisper
 torch~=2.3.0
 tiktoken~=0.6.0
-bcrypt~=4.1.2
+bcrypt==4.0.1
+passlib[bcrypt]
 python-multipart~=0.0.9
 motor~=3.4.0
 
