--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ openai-whisper
 torch~=2.3.0
 tiktoken~=0.6.0
 bcrypt==4.0.1
-passlib[bcrypt]
+passlib[bcrypt]~=1.7.4
 python-multipart~=0.0.9
 motor~=3.4.0
 
+
+langchain~=0.1.16
